feat: user register & login

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,10 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
+input::-ms-reveal {
+  display: none !important;
+}
+
 @theme inline {
   --text-2xs: 10px;
 
