--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bungee:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Michroma&display=swap");
 
 body {
   font-family: "Lato", Arial, Helvetica, sans-serif;
@@ -63,6 +64,12 @@ input:-webkit-autofill {
   --breakpoint-xl: 1048px;
 
   --font-bitcount: var(--font-bitcount);
+}
+
+@layer components {
+  .font-michroma {
+    font-family: "Michroma", sans-serif;
+  }
 }
 
 @layer utilities {
