refactor: before revamp banner

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bungee:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Michroma&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Michroma&family=Meddon&display=swap");
 
 body {
   font-family: "Lato", Arial, Helvetica, sans-serif;
@@ -69,6 +70,10 @@ input:-webkit-autofill {
 @layer components {
   .font-michroma {
     font-family: "Michroma", sans-serif;
+  }
+
+  .font-meddon {
+    font-family: "Meddon", cursive;
   }
 }
 
